# snake-in-shell-cpp

./: .clang-format  .cmake-format  .gitattributes  .gitignore  CMakeLists.txt  CppEnetWrapper.hpp  CppEnetWrapperMinimal.cpp  CppVersion.hpp  Field.hpp  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Graphic.cpp  Graphic.hpp  Keyboard.cpp  Keyboard.hpp  LICENSE  Player.hpp  README-template.md  README.md  Snake-forever.cpp  Snake.cpp  Snake.hpp  SolutionController.py  SolutionRenamer.py  SolutionUpgrader.py  Sounds.hpp  UserUtil.hpp  conanfile.py
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
Assets/: Snake2.drawio  hpp2uml.bat
Source/: CppEnetWrapper.hpp  CppEnetWrapperMinimal.cpp.disabled  CppVersion.hpp  Field.hpp  Fruit.cpp  Fruit.hpp  Game.cpp  Game.hpp  Graphic.cpp  Graphic.hpp  Keyboard.cpp  Keyboard.hpp  Player.hpp  Snake.cpp  Snake.hpp  SnakeLibrary.cpp
Standalone/: CMakeLists.txt  LICENSE
Standalone/Source/: Main.cpp
cmake/: CPM.cmake  ccache.cmake  hardening.cmake  ipo.cmake  runtime.cmake  sanitizer-targets.cmake
cmake/Modules/: FindX11.cmake
include/: Logger.hpp
include/SnakeLibrary/: SnakeLibrary.hpp
